# cython-scikit-build-example

./: CMakeLists.txt  README.md  pyproject.toml  setup.py
hello/: CMakeLists.txt  __init__.py  _hello.pyx  chello.pxd  hello.c  hello.h
